--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "structure_converter"
+name = "sconv"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = {version = "4.2.4", features = ["derive"]}
+
+[dev-dependencies]
+assert_cmd = "2.0.11"
+predicates = "3.0.3"
