--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = {version = "4.2.4", features = ["derive"]}
+anyhow = "1.0"
+enum_dispatch = "0.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.11"
