--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 clap = {version = "4.2.4", features = ["derive"]}
 anyhow = "1.0"
 enum_dispatch = "0.3"
+strum = "0.24"
+strum_macros = "0.24"
 
 [dev-dependencies]
 assert_cmd = "2.0.11"
