--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ anyhow = "1.0"
 enum_dispatch = "0.3"
 strum = "0.24"
 strum_macros = "0.24"
+calamine = "0.19.1"
+serde = "1.0"
+serde_yaml = "0.9"
 
 [dev-dependencies]
 assert_cmd = "2.0.11"
