--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ anyhow = "1.0"
 enum_dispatch = "0.3"
 strum = "0.24"
 strum_macros = "0.24"
-calamine = "0.19.1"
+calamine = {version = "0.20", features = ["dates"]}
 serde = "1.0"
 serde_yaml = "0.9"
 
