--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = {version = "4.2.4", features = ["derive"]}
+config = "0.13"
 anyhow = "1.0"
 enum_dispatch = "0.3"
 strum = "0.24"
