--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2021"
 
 [dependencies]
 clap = {version = "4.2.4", features = ["derive"]}
-config = "0.13"
 anyhow = "1.0"
+thiserror = "1.0"
 enum_dispatch = "0.3"
 strum = "0.24"
 strum_macros = "0.24"
 calamine = {version = "0.20", features = ["dates"]}
-serde = "1.0"
+serde = {version = "1.0", features =["derive"]}
 serde_yaml = "0.9"
 
 [dev-dependencies]
